--- a/ddev.ipynb
+++ b/ddev.ipynb
@@ -23,7 +23,7 @@
     "import matplotlib.pyplot as plt\n",
     "from openpyxl import load_workbook\n",
     "import locale\n",
-    "locale.setlocale(locale.LC_TIME, 'fr_FR.UTF-8')\n"
+    "# locale.setlocale(locale.LC_TIME, 'fr_FR.UTF-8')\n"
    ]
   },
   {
